# asst4_animation

./: CMakeLists.txt  README (2).md  README.md  encode  index.html  params.json
CMU462/include/CMU462/: application.h  color.h  misc.h  osdtext.h  viewer.h
CMU462/src/: color.cpp  matrix3x3.cpp  viewer.cpp
src/: CMakeLists.txt  animator.cpp  animator.h  character.cpp  character.h  hardware_renderer.cpp  hardware_renderer.h  main.cpp  png.h  spline.inl  svg.cpp  svg.h  svg_renderer.h  texture.h  timeline.cpp  timeline.h  viewport.cpp  viewport.h
